set(_FILES
  derivedFvPatchFields/semiPermeableBaffle/semiPermeableBaffleMassFraction/semiPermeableBaffleMassFractionFvPatchScalarField.C
  derivedFvPatchFields/semiPermeableBaffle/semiPermeableBaffleVelocity/semiPermeableBaffleVelocityFvPatchVectorField.C
  derivedFvPatchFields/humidityTemperatureCoupledMixed/humidityTemperatureCoupledMixedFvPatchScalarField.C
  derivedFvPatchFields/thermalBaffle1D/thermalBaffle1DFvPatchScalarFields.C
  derivedFvPatchFields/totalFlowRateAdvectiveDiffusive/totalFlowRateAdvectiveDiffusiveFvPatchScalarField.C
  derivedFvPatchFields/externalWallHeatFluxTemperature/externalWallHeatFluxTemperatureFvPatchScalarField.C
  derivedFvPatchFields/wallHeatTransfer/wallHeatTransferFvPatchScalarField.C
  derivedFvPatchFields/convectiveHeatTransfer/convectiveHeatTransferFvPatchScalarField.C
  derivedFvPatchFields/fixedIncidentRadiation/fixedIncidentRadiationFvPatchScalarField.C
  derivedFvPatchFields/outletMappedUniformInletHeatAddition/outletMappedUniformInletHeatAdditionFvPatchField.C
  derivedFvPatchFields/outletMachNumberPressure/outletMachNumberPressureFvPatchScalarField.C
  derivedFvPatchFields/temperatureCoupledBase/temperatureCoupledBase.C
  derivedFvPatchFields/turbulentTemperatureCoupledBaffleMixed/turbulentTemperatureCoupledBaffleMixedFvPatchScalarField.C
  derivedFvPatchFields/turbulentTemperatureRadCoupledMixed/turbulentTemperatureRadCoupledMixedFvPatchScalarField.C
  derivedFvPatchFields/lumpedMassWallTemperature/lumpedMassWallTemperatureFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/alphatWallFunctions/alphatWallFunction/alphatWallFunctionFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/alphatWallFunctions/alphatJayatillekeWallFunction/alphatJayatillekeWallFunctionFvPatchScalarField.C
  derivedFvPatchFields/wallFunctions/sorptionWallFunction/sorptionWallFunctionFvPatchScalarField.C
)
add_library(thermoTools ${_FILES})
target_compile_features(thermoTools PUBLIC cxx_std_11)
target_compile_definitions(thermoTools PUBLIC WM_LABEL_SIZE=${WM_LABEL_SIZE} WM_${WM_PRECISION} NoRepository OPENFOAM=${OPENFOAM_VERSION})
target_link_libraries(thermoTools PUBLIC incompressibleMultiphaseSystems)
target_include_directories(thermoTools PUBLIC
  derivedFvPatchFields/convectiveHeatTransfer
  derivedFvPatchFields/externalWallHeatFluxTemperature
  derivedFvPatchFields/fixedIncidentRadiation
  derivedFvPatchFields/humidityTemperatureCoupledMixed
  derivedFvPatchFields/lumpedMassWallTemperature
  derivedFvPatchFields/outletMachNumberPressure
  derivedFvPatchFields/outletMappedUniformInletHeatAddition
  derivedFvPatchFields/semiPermeableBaffle/semiPermeableBaffleMassFraction
  derivedFvPatchFields/semiPermeableBaffle/semiPermeableBaffleVelocity
  derivedFvPatchFields/temperatureCoupledBase
  derivedFvPatchFields/thermalBaffle1D
  derivedFvPatchFields/totalFlowRateAdvectiveDiffusive
  derivedFvPatchFields/turbulentTemperatureCoupledBaffleMixed
  derivedFvPatchFields/turbulentTemperatureRadCoupledMixed
  derivedFvPatchFields/wallFunctions/alphatWallFunctions/alphatJayatillekeWallFunction
  derivedFvPatchFields/wallFunctions/alphatWallFunctions/alphatWallFunction
  derivedFvPatchFields/wallFunctions/sorptionWallFunction
  derivedFvPatchFields/wallHeatTransfer
)
install(TARGETS thermoTools DESTINATION ${CMAKE_INSTALL_LIBDIR}/openfoam EXPORT openfoam-targets)
